// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DOM snapshots SLDSMediaObject Base 1`] = `
<div
  className="slds-p-around_medium"
>
  <div
    className="slds-media"
  >
    <div
      className="slds-media__figure"
    >
      <span
        className="slds-icon_container slds-icon-standard-user"
      >
        <svg
          aria-hidden="true"
          className="slds-icon"
        >
          <use
            href="/assets/icons/standard-sprite/svg/symbols.svg#user"
          />
        </svg>
        
      </span>
       
    </div>
    <div
      className="slds-media__body"
    >
      Lorem ipsum dolor sit amet, consectetur adipisicing elit. Fugiat minus molestias reprehenderit consequuntur sapiente. Modi veritatis totam accusantium numquam assumenda. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Fugiat minus molestias reprehenderit consequuntur sapiente. Modi veritatis totam accusantium numquam assumenda.
    </div>
  </div>
</div>
`;

exports[`DOM snapshots SLDSMediaObject Docs site Default 1`] = `
<div
  className="slds-p-around_medium"
>
  <div
    className="slds-media"
  >
    <div
      className="slds-media__figure"
    >
      <span
        className="slds-icon_container slds-icon-standard-user"
      >
        <svg
          aria-hidden="true"
          className="slds-icon slds-icon_large"
        >
          <use
            href="/assets/icons/standard-sprite/svg/symbols.svg#user"
          />
        </svg>
        
      </span>
       
    </div>
    <div
      className="slds-media__body"
    >
      Lorem ipsum dolor sit amet, consectetur adipisicing elit. Fugiat minus molestias reprehenderit consequuntur sapiente. Modi veritatis totam accusantium numquam assumenda.
    </div>
  </div>
</div>
`;

exports[`DOM snapshots SLDSMediaObject Docs site VerticallyCentered 1`] = `
<div
  className="slds-p-around_medium"
>
  <div
    className="slds-media slds-media_center"
  >
    <div
      className="slds-media__figure"
    >
      <span
        className="slds-icon_container slds-icon-standard-user"
      >
        <svg
          aria-hidden="true"
          className="slds-icon slds-icon_large"
        >
          <use
            href="/assets/icons/standard-sprite/svg/symbols.svg#user"
          />
        </svg>
        
      </span>
       
    </div>
    <div
      className="slds-media__body"
    >
      Lorem ipsum dolor sit amet, consectetur adipisicing elit. Fugiat minus molestias reprehenderit consequuntur sapiente. Modi veritatis totam accusantium numquam assumenda. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Fugiat minus molestias reprehenderit consequuntur sapiente. Modi veritatis totam accusantium numquam assumenda.
    </div>
  </div>
</div>
`;

exports[`DOM snapshots SLDSMediaObject Figure Vertical Center 1`] = `
<div
  className="slds-p-around_medium"
>
  <div
    className="slds-media slds-media_center"
  >
    <div
      className="slds-media__figure"
    >
      <span
        className="slds-icon_container slds-icon-standard-user"
      >
        <svg
          aria-hidden="true"
          className="slds-icon"
        >
          <use
            href="/assets/icons/standard-sprite/svg/symbols.svg#user"
          />
        </svg>
        
      </span>
       
    </div>
    <div
      className="slds-media__body"
    >
      Lorem ipsum dolor sit amet, consectetur adipisicing elit. Fugiat minus molestias reprehenderit consequuntur sapiente. Modi veritatis totam accusantium numquam assumenda. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Fugiat minus molestias reprehenderit consequuntur sapiente. Modi veritatis totam accusantium numquam assumenda.
    </div>
  </div>
</div>
`;
